# ChangeLog for media-libs/gd
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/gd/ChangeLog,v 1.62 2010/03/08 09:42:43 ssuominen Exp $

  08 Mar 2010; Samuli Suominen <ssuominen@gentoo.org> gd-2.0.35-r1.ebuild,
  +files/gd-2.0.35-libpng14.patch:
  Fix building with libpng14 wrt #305101 by Lars Wendler.

  21 Nov 2009; nixnut <nixnut@gentoo.org> gd-2.0.35-r1.ebuild:
  ppc stable #292130

  17 Nov 2009; Brent Baude <ranger@gentoo.org> gd-2.0.35-r1.ebuild:
  Marking gd-2.0.35-r1 ppc64 for bug 292130

  11 Nov 2009; Jeroen Roovers <jer@gentoo.org> gd-2.0.35-r1.ebuild:
  Stable for HPPA (bug #292130).

  10 Nov 2009; Raúl Porcel <armin76@gentoo.org> gd-2.0.35-r1.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #292130

  10 Nov 2009; Dawid Węgliński <cla@gentoo.org> gd-2.0.35-r1.ebuild:
  Stable on amd64 (security #292130)

  09 Nov 2009; Christian Faulhammer <fauli@gentoo.org> gd-2.0.35-r1.ebuild:
  stable x86, security bug 292130

*gd-2.0.35-r1 (09 Nov 2009)

  09 Nov 2009; Markus Meier <maekke@gentoo.org> +gd-2.0.35-r1.ebuild,
  +files/gd-2.0.35-maxcolors.patch:
  revision bump wrt security bug #292130

  29 May 2009; Mike Frysinger <vapier@gentoo.org> -gd-2.0.34.ebuild:
  Punt due to GLSA 200708-05 vuln #271688 by Robert Buchholz.

  30 Mar 2008; <ricmm@gentoo.org> gd-2.0.34.ebuild, gd-2.0.35.ebuild:
  Drop to ~mips due to unstable deps

  06 Aug 2007; Joshua Kinard <kumba@gentoo.org> gd-2.0.35.ebuild:
  Stable on mips, per #179154.

  25 Jul 2007; Markus Rothe <corsair@gentoo.org> gd-2.0.35.ebuild:
  Stable on ppc64; bug #179154

  24 Jul 2007; Steve Dibb <beandog@gentoo.org> gd-2.0.35.ebuild:
  amd64 stable, security bug 179154

  21 Jul 2007; Raúl Porcel <armin76@gentoo.org> gd-2.0.35.ebuild:
  alpha/ia64/x86 stable wrt security #179154

  21 Jul 2007; Jeroen Roovers <jer@gentoo.org> gd-2.0.35.ebuild:
  Stable for HPPA (bug #179154).
