@@ -2,7 +2,6 @@ AUX gd-2.0.35-libpng14.patch 331 RMD160 109e44c20a8fb776f0b524802b0e932cfc85183c
 AUX gd-2.0.35-maxcolors.patch 414 RMD160 6a6cefb35a49d69b8739d7406a909aa67f3a9904 SHA1 14c395c21e7ece6f182603774a1d65979c9eb10a SHA256 022a650d6d2e03281b94bf6665b0084c79d75ab499b7266c7d2cf620b260a15b
 AUX gd-prefix.patch 210 RMD160 dfb1d294c5793d02cdfbea6ecde037e789c7d316 SHA1 9bb5f98e6a41ebce9c3089f48c6187432574b6f5 SHA256 1e7625adc6a11402a20ce69532acbb4ee074200069b3ba5ed72dd0b1b4f7c5af
 DIST gd-2.0.35.tar.bz2 1212730 RMD160 f452a2c333b2ba9b7b4c143983ec2af18a335516 SHA1 ccf34a610abff2dbf133a20c4d2a4aa94939018a SHA256 bf222490749d2a9a9ac3593b01eb55aed98461ff81202414707f61b42aa300f9
-EBUILD gd-2.0.35-r1.ebuild 2272 RMD160 baf38ba745bf6029c301b4240056370971ebcdae SHA1 669e6fc71f3422dc24065310e9e5ddc634c7376a SHA256 fa2e4b2c5084f56ea95e44b0e5999b385212e84911165f8a92a4b5db7d2c0deb
-EBUILD gd-2.0.35.ebuild 1358 RMD160 ee97a12f15c74525d60b014a6c29743197efe6ad SHA1 6dc14453a9319abfe2e2ac12094831624e8f5395 SHA256 0eab132952b48c063cefcc80fcd5f864406d76cab1f8ce9442e17d2b6e73911a
-MISC ChangeLog 13440 RMD160 f551aa2231bd31d7c31be7d8710d4701841479a6 SHA1 f9ebe7ff1317081fa5b7e78984e26c35e234ecc8 SHA256 a0df24eae7e44917dc58fd33628b478efb7d5fd606853db08246550fd13792aa
+EBUILD gd-2.0.35-r1.ebuild 2449 RMD160 6da9465980efb27ceb092e4d4e26dd0e7b474fa1 SHA1 0a2145bbf1234618eb4200a2b4d5c0f64a2396c5 SHA256 41bcda83bf892f1b172d54251ee98beecfddbdaf54048600ee1eb10435c0b579
+MISC ChangeLog 13715 RMD160 53c10344cf5a9c8ff674892bdea4712dbf635e2d SHA1 05fea9397251b58db76196aa3b3d13378bf89a51 SHA256 a2fad10f75fb181f9058c96a1b9a90d20b5932ad92f35b64296e19b7b18770dc
 MISC metadata.xml 1199 RMD160 d34c8a08b02ececd35c66c0c3594f326639ef8a5 SHA1 e52d9e8500558488eee80333fe2e112a23a519a5 SHA256 a670f3b0950512e392f25f290fc70b953c941cecdc6919cb38048bef2d46c843
