@@ -1,51 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/gd/gd-2.0.35.ebuild,v 1.11 2008/03/30 23:08:36 ricmm Exp $
-
-inherit autotools prefix
-
-DESCRIPTION="A graphics library for fast image creation"
-HOMEPAGE="http://libgd.org/"
-SRC_URI="http://libgd.org/releases/${P}.tar.bz2"
-
-LICENSE="|| ( as-is BSD )"
-SLOT="2"
-KEYWORDS="~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris"
-IUSE="fontconfig jpeg png truetype xpm"
-
-DEPEND="fontconfig? ( media-libs/fontconfig )
-	jpeg? ( >=media-libs/jpeg-6b )
-	png? ( >=media-libs/libpng-1.2.5 sys-libs/zlib )
-	truetype? ( >=media-libs/freetype-2.1.5 )
-	xpm? ( x11-libs/libXpm x11-libs/libXt )
-	x86-interix? ( sys-devel/gettext )"
-
-src_unpack() {
-	unpack ${A}
-	cd "${S}"
-	# need new libtool for interix
-	[[ ${CHOST} == *-interix* ]] \
-		&& eautoreconf \
-		|| eautoconf
-	find . -type f -print0 | xargs -0 touch -r configure
-
-	epatch "${FILESDIR}"/${PN}-prefix.patch
-	eprefixify bdftogd
-}
-
-src_compile() {
-	econf \
-		$(use_with fontconfig) \
-		$(use_with png) \
-		$(use_with truetype freetype) \
-		$(use_with jpeg) \
-		$(use_with xpm) \
-		|| die
-	emake || die
-}
-
-src_install() {
-	emake DESTDIR="${D}" install || die
-	dodoc INSTALL README*
-	dohtml -r ./
-}
